Adiciona card do Tradutor Profissional AI no dashboard

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -267,7 +267,26 @@
             </div>
 
             <div class="extensions-section">
-                <h3>📱 Suas Extensões</h3>
+                <h3>🌐 Ferramentas Web</h3>
+                <div class="extension-list">
+                    <!-- Tradutor Profissional AI -->
+                    <div class="extension-card" style="background: white; padding: 1.5rem; border-radius: 12px; border: 2px solid #e1e4e8; display: flex; align-items: center; gap: 1.5rem; margin-bottom: 1rem;">
+                        <img src="logo-nardoto.png" alt="Tradutor AI" style="width: 48px; height: 48px; object-fit: contain;">
+                        <div style="flex: 1;">
+                            <h4 style="margin: 0 0 0.5rem 0; font-size: 1.125rem;">🌐 Tradutor Profissional AI</h4>
+                            <p style="margin: 0; color: #666; font-size: 0.875rem;">Traduções precisas e profissionais com IA (Groq & Gemini)</p>
+                            <span class="extension-status status-active" style="display: inline-block; padding: 0.25rem 0.75rem; border-radius: 12px; font-size: 0.75rem; font-weight: 600; background: #d4edda; color: #155724; margin-top: 0.5rem;">✅ Disponível</span>
+                        </div>
+                        <a href="https://nardoto.com.br/tradutor-profissional-ai/" target="_blank"
+                           style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 0.75rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: 600; transition: transform 0.2s; white-space: nowrap;">
+                            🚀 Acessar
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="extensions-section" style="margin-top: 2rem;">
+                <h3>📱 Suas Extensões Chrome</h3>
                 <div class="extension-list" id="extensionList">
                     <!-- Será preenchido via JavaScript -->
                 </div>
