--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,57 +11,58 @@
         .dashboard {
             min-height: 100vh;
             background: #f8f9fa;
-            padding: 2rem;
+            padding: 1rem;
         }
 
         .dashboard-header {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 2rem;
-            border-radius: 16px;
-            margin-bottom: 2rem;
+            padding: 1rem;
+            border-radius: 8px;
+            margin-bottom: 1rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
             flex-wrap: wrap;
-            gap: 1rem;
+            gap: 0.5rem;
         }
 
         .user-info {
             display: flex;
             align-items: center;
-            gap: 1rem;
+            gap: 0.5rem;
         }
 
         .user-avatar {
-            width: 64px;
-            height: 64px;
+            width: 32px;
+            height: 32px;
             border-radius: 50%;
-            border: 3px solid white;
+            border: 2px solid white;
         }
 
         .user-details h2 {
-            margin: 0 0 0.25rem 0;
-            font-size: 1.5rem;
+            margin: 0 0 0.125rem 0;
+            font-size: 0.75rem;
         }
 
         .user-plan {
             display: inline-block;
             background: rgba(255,255,255,0.2);
-            padding: 0.25rem 0.75rem;
-            border-radius: 20px;
-            font-size: 0.875rem;
+            padding: 0.125rem 0.375rem;
+            border-radius: 10px;
+            font-size: 0.4375rem;
             font-weight: 600;
         }
 
         .logout-btn {
             background: rgba(255,255,255,0.2);
-            border: 2px solid rgba(255,255,255,0.5);
+            border: 1px solid rgba(255,255,255,0.5);
             color: white;
-            padding: 0.75rem 1.5rem;
-            border-radius: 8px;
+            padding: 0.375rem 0.75rem;
+            border-radius: 4px;
             cursor: pointer;
             font-weight: 600;
+            font-size: 0.7rem;
             transition: all 0.3s;
         }
 
@@ -76,49 +77,49 @@
 
         .stats-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1.5rem;
-            margin-bottom: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(125px, 1fr));
+            gap: 0.75rem;
+            margin-bottom: 1rem;
         }
 
         .stat-card {
             background: white;
-            padding: 1.5rem;
-            border-radius: 12px;
-            border: 2px solid #e1e4e8;
+            padding: 0.75rem;
+            border-radius: 6px;
+            border: 1px solid #e1e4e8;
         }
 
         .stat-label {
             color: #666;
-            font-size: 0.875rem;
-            margin-bottom: 0.5rem;
+            font-size: 0.4375rem;
+            margin-bottom: 0.25rem;
         }
 
         .stat-value {
-            font-size: 2rem;
+            font-size: 1rem;
             font-weight: 700;
             color: #667eea;
         }
 
         .extensions-section h3 {
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
+            font-size: 0.75rem;
+            margin-bottom: 0.75rem;
             color: #1a1a1a;
         }
 
         .extension-list {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 1.5rem;
+            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+            gap: 0.75rem;
         }
 
         .extension-item {
             background: white;
-            padding: 1.5rem;
-            border-radius: 12px;
-            border: 2px solid #e1e4e8;
+            padding: 0.75rem;
+            border-radius: 6px;
+            border: 1px solid #e1e4e8;
             display: flex;
-            gap: 1rem;
+            gap: 0.5rem;
             align-items: center;
             position: relative;
         }
@@ -131,13 +132,13 @@
             margin-left: auto;
             display: inline-flex;
             align-items: center;
-            gap: 0.5rem;
+            gap: 0.25rem;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 0.5rem 1rem;
-            border-radius: 8px;
+            padding: 0.25rem 0.5rem;
+            border-radius: 4px;
             text-decoration: none;
-            font-size: 0.875rem;
+            font-size: 0.4375rem;
             font-weight: 600;
             transition: all 0.3s ease;
             border: none;
@@ -145,8 +146,8 @@
         }
 
         .extension-install-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
+            transform: translateY(-1px);
+            box-shadow: 0 2px 6px rgba(102, 126, 234, 0.4);
         }
 
         .extension-install-btn svg {
@@ -154,20 +155,20 @@
         }
 
         .extension-icon-lg {
-            font-size: 2.5rem;
+            font-size: 1.25rem;
             flex-shrink: 0;
         }
 
         .extension-content h4 {
-            margin: 0 0 0.5rem 0;
-            font-size: 1.125rem;
+            margin: 0 0 0.25rem 0;
+            font-size: 0.5625rem;
         }
 
         .extension-status {
             display: inline-block;
-            padding: 0.25rem 0.75rem;
-            border-radius: 12px;
-            font-size: 0.75rem;
+            padding: 0.125rem 0.375rem;
+            border-radius: 6px;
+            font-size: 0.375rem;
             font-weight: 600;
         }
 
@@ -183,30 +184,31 @@
 
         .upgrade-banner {
             background: linear-gradient(135deg, #ffd700 0%, #ffed4e 100%);
-            padding: 2rem;
-            border-radius: 16px;
+            padding: 1rem;
+            border-radius: 8px;
             text-align: center;
-            margin: 2rem 0;
+            margin: 1rem 0;
         }
 
         .upgrade-banner h3 {
             color: #1a1a1a;
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem;
+            font-size: 0.875rem;
         }
 
         .trial-warning {
             background: #fff3cd;
-            border: 2px solid #ffc107;
-            padding: 1rem;
-            border-radius: 8px;
-            margin-bottom: 2rem;
+            border: 1px solid #ffc107;
+            padding: 0.5rem;
+            border-radius: 4px;
+            margin-bottom: 1rem;
             display: flex;
             align-items: center;
-            gap: 1rem;
+            gap: 0.5rem;
         }
 
         .trial-warning-icon {
-            font-size: 2rem;
+            font-size: 1rem;
         }
 
         @media (max-width: 768px) {
@@ -225,12 +227,12 @@
     <div class="dashboard">
         <div class="dashboard-container">
             <div class="dashboard-header">
-                <div style="display: flex; align-items: center; gap: 2rem; flex-wrap: wrap; width: 100%;">
-                    <div style="display: flex; align-items: center; gap: 1rem;">
-                        <img src="logo-nardoto.png" alt="Nardoto Labs" style="height: 48px; width: 48px; object-fit: contain;">
-                        <h1 style="margin: 0; font-size: 1.5rem; font-weight: 700;">Nardoto Labs</h1>
+                <div style="display: flex; align-items: center; gap: 1rem; flex-wrap: wrap; width: 100%;">
+                    <div style="display: flex; align-items: center; gap: 0.5rem;">
+                        <img src="logo-nardoto.png" alt="Nardoto Labs" style="height: 24px; width: 24px; object-fit: contain;">
+                        <h1 style="margin: 0; font-size: 0.75rem; font-weight: 700;">Nardoto Labs</h1>
                     </div>
-                    <div style="display: flex; align-items: center; gap: 2rem; margin-left: auto; flex-wrap: wrap;">
+                    <div style="display: flex; align-items: center; gap: 1rem; margin-left: auto; flex-wrap: wrap;">
                         <div class="user-info">
                             <img id="userAvatar" src="" alt="" class="user-avatar">
                             <div class="user-details">
@@ -247,7 +249,7 @@
                 <span class="trial-warning-icon">⏰</span>
                 <div>
                     <strong id="trialText">Seu trial expira em breve!</strong>
-                    <p style="margin: 0.5rem 0 0 0; font-size: 0.875rem;">Assine um plano para continuar usando todas as extensões.</p>
+                    <p style="margin: 0.25rem 0 0 0; font-size: 0.4375rem;">Assine um plano para continuar usando todas as extensões.</p>
                 </div>
             </div>
 
@@ -270,22 +272,22 @@
                 <h3>🌐 Ferramentas Web</h3>
                 <div class="extension-list">
                     <!-- Tradutor Profissional AI -->
-                    <div class="extension-card" style="background: white; padding: 1.5rem; border-radius: 12px; border: 2px solid #e1e4e8; display: flex; align-items: center; gap: 1.5rem; margin-bottom: 1rem;">
-                        <img src="logo-nardoto.png" alt="Tradutor AI" style="width: 48px; height: 48px; object-fit: contain;">
+                    <div class="extension-card" style="background: white; padding: 0.75rem; border-radius: 6px; border: 1px solid #e1e4e8; display: flex; align-items: center; gap: 0.75rem; margin-bottom: 0.5rem;">
+                        <img src="logo-nardoto.png" alt="Tradutor AI" style="width: 24px; height: 24px; object-fit: contain;">
                         <div style="flex: 1;">
-                            <h4 style="margin: 0 0 0.5rem 0; font-size: 1.125rem;">🌐 Tradutor Profissional AI</h4>
-                            <p style="margin: 0; color: #666; font-size: 0.875rem;">Traduções precisas e profissionais com IA (Groq & Gemini)</p>
-                            <span class="extension-status status-active" style="display: inline-block; padding: 0.25rem 0.75rem; border-radius: 12px; font-size: 0.75rem; font-weight: 600; background: #d4edda; color: #155724; margin-top: 0.5rem;">✅ Disponível</span>
+                            <h4 style="margin: 0 0 0.25rem 0; font-size: 0.5625rem;">🌐 Tradutor Profissional AI</h4>
+                            <p style="margin: 0; color: #666; font-size: 0.4375rem;">Traduções precisas e profissionais com IA (Groq & Gemini)</p>
+                            <span class="extension-status status-active" style="display: inline-block; padding: 0.125rem 0.375rem; border-radius: 6px; font-size: 0.375rem; font-weight: 600; background: #d4edda; color: #155724; margin-top: 0.25rem;">✅ Disponível</span>
                         </div>
                         <a href="https://nardoto.com.br/tradutor-profissional-ai/" target="_blank"
-                           style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 0.75rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: 600; transition: transform 0.2s; white-space: nowrap;">
+                           style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 0.375rem 0.75rem; border-radius: 4px; text-decoration: none; font-weight: 600; font-size: 0.5rem; transition: transform 0.2s; white-space: nowrap;">
                             🚀 Acessar
                         </a>
                     </div>
                 </div>
             </div>
 
-            <div class="extensions-section" style="margin-top: 2rem;">
+            <div class="extensions-section" style="margin-top: 1rem;">
                 <h3>📱 Suas Extensões Chrome</h3>
                 <div class="extension-list" id="extensionList">
                     <!-- Será preenchido via JavaScript -->
@@ -401,20 +403,22 @@
             const activeExtensions = userData.features?.length || 0;
             document.getElementById('statExtensions').textContent = activeExtensions;
 
-            // Trial
+            // Trial - só mostrar para usuários FREE
             const trialEnd = userData.trialExpiresAt ? new Date(userData.trialExpiresAt) : null;
             const now = new Date();
+            const isFreeUser = plan === 'FREE';
 
             if (trialEnd && trialEnd > now) {
                 const daysLeft = Math.ceil((trialEnd - now) / (1000 * 60 * 60 * 24));
                 document.getElementById('statTrial').textContent = `${daysLeft} ${daysLeft === 1 ? 'dia' : 'dias'}`;
 
-                if (daysLeft <= 1) {
+                // Só mostrar warning se for usuário FREE
+                if (daysLeft <= 1 && isFreeUser) {
                     document.getElementById('trialWarning').style.display = 'flex';
                     document.getElementById('trialText').textContent = `⚠️ Trial expira em ${daysLeft} ${daysLeft === 1 ? 'dia' : 'dias'}!`;
                 }
             } else {
-                document.getElementById('statTrial').textContent = 'Expirado';
+                document.getElementById('statTrial').textContent = isFreeUser ? 'Expirado' : '-';
             }
 
             // Extensions
